Cleanup, Reuters example

--- a/sgh.ipynb
+++ b/sgh.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,22 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/larskormak/workdir/sgh-nlp/env/lib/python3.6/site-packages/sklearn/feature_extraction/text.py:301: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['could', 'might', 'must', 'need', 'sha', 'wo', 'would'] not in stop_words.\n",
-      "  'stop_words.' % sorted(inconsistent))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted 23793 features.\n"
+      "Extracted 26283 features.\n"
      ]
     }
    ],
@@ -108,10 +100,10 @@
     "        tokens = [t for t in tokens if t.isalpha()]\n",
     "        return tokens\n",
     "\n",
-    "vect = TfidfVectorizer(\n",
-    "    stop_words=stopwords.words('english'),\n",
-    "    tokenizer=Tokenizer(),\n",
-    "    max_df=0.7\n",
+    "vect = CountVectorizer(\n",
+    "    # stop_words=stopwords.words('english'),\n",
+    "    # tokenizer=Tokenizer(),\n",
+    "    # max_df=0.7\n",
     "    # norm='l2'\n",
     ")\n",
     "\n",
@@ -126,22 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['acq', 'alum', 'barley', 'bop', 'carcass', 'castor-oil', 'cocoa', 'coconut', 'coconut-oil', 'coffee', 'copper', 'copra-cake', 'corn', 'cotton', 'cotton-oil', 'cpi', 'cpu', 'crude', 'dfl', 'dlr', 'dmk', 'earn', 'fuel', 'gas', 'gnp', 'gold', 'grain', 'groundnut', 'groundnut-oil', 'heat', 'hog', 'housing', 'income', 'instal-debt', 'interest', 'ipi', 'iron-steel', 'jet', 'jobs', 'l-cattle', 'lead', 'lei', 'lin-oil', 'livestock', 'lumber', 'meal-feed', 'money-fx', 'money-supply', 'naphtha', 'nat-gas', 'nickel', 'nkr', 'nzdlr', 'oat', 'oilseed', 'orange', 'palladium', 'palm-oil', 'palmkernel', 'pet-chem', 'platinum', 'potato', 'propane', 'rand', 'rape-oil', 'rapeseed', 'reserves', 'retail', 'rice', 'rubber', 'rye', 'ship', 'silver', 'sorghum', 'soy-meal', 'soy-oil', 'soybean', 'strategic-metal', 'sugar', 'sun-meal', 'sun-oil', 'sunseed', 'tea', 'tin', 'trade', 'veg-oil', 'wheat', 'wpi', 'yen', 'zinc']\n",
-      "Training: 35.\n",
-      " Testing: 23.\n"
+      "Training: 111.\n",
+      " Testing: 28.\n"
      ]
     }
    ],
    "source": [
-    "print(reuters.categories())\n",
-    "cat = 'alum'\n",
+    "cat = 'coffee'\n",
     "train_y = [(cat in label) for label in train_labels]\n",
     "test_y = [(cat in label) for label in test_labels]\n",
     "\n",
@@ -151,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -160,49 +150,27 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "       False       0.99      0.99      0.99      2996\n",
-      "        True       0.24      0.22      0.23        23\n",
+      "       False       1.00      0.99      1.00      2991\n",
+      "        True       0.57      0.96      0.72        28\n",
       "\n",
       "   micro avg       0.99      0.99      0.99      3019\n",
-      "   macro avg       0.62      0.61      0.61      3019\n",
-      "weighted avg       0.99      0.99      0.99      3019\n",
+      "   macro avg       0.79      0.98      0.86      3019\n",
+      "weighted avg       1.00      0.99      0.99      3019\n",
       "\n",
-      "[[2980   16]\n",
-      " [  18    5]]\n"
+      "[[2971   20]\n",
+      " [   1   27]]\n"
      ]
     }
    ],
    "source": [
-    "nb = GaussianNB()\n",
+    "nb = MultinomialNB(alpha=0.1)\n",
     "\n",
     "nb.fit(train_x.toarray(), train_y)\n",
     "\n",
     "pred_y = nb.predict(test_x.toarray())\n",
-    "pred_train = nb.predict(train_x.toarray())\n",
     "\n",
     "print(metrics.classification_report(test_y, pred_y))\n",
     "print(metrics.confusion_matrix(test_y, pred_y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[2255, 45], [22, 697]]"
-      ]
-     },
-     "execution_count": 157,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[[2255,   45],\n",
-    " [  22,  697]]"
    ]
   },
   {
@@ -215,9 +183,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sgh-nlp",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sgh-nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -229,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
