Updated scripts and Readme

--- a/20news.ipynb
+++ b/20news.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Aviva Natural Language Processing SGH Talk"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -19,22 +26,50 @@
     "from pprint import pprint\n",
     "from time import time\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = [25, 25]\n",
-    "plt.rc('xtick', labelsize=30)\n",
-    "plt.rc('ytick', labelsize=30)\n",
     "\n",
+    "# Tweak matplotlib the figure sizes\n",
+    "plt.rcParams['figure.figsize'] = [35, 25]\n",
+    "plt.rc('xtick', labelsize=30)\n",
+    "plt.rc('ytick', labelsize=30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the data first. The 20 Newsgroups dataset is conveniently available through the scikit-learn library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Data loading\n",
     "news_train = fetch_20newsgroups(\n",
     "    subset='train',\n",
     ")\n",
+    "\n",
     "news_test = fetch_20newsgroups(\n",
     "    subset='test',\n",
     ")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define helper functions to \n",
+    "\n",
+    "1. Get top tokens from a Multinomial NB model.\n",
+    "\n",
+    "2. Compute macro-averaged metrics."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explore the data first."
+    "How does our data look like?"
    ]
   },
   {
@@ -82,6 +117,13 @@
    "source": [
     "print(f\"Label: {news_train.target_names[news_train.target[3]]}\\n\\n\")\n",
     "print(news_train.data[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Are the classes balanced?"
    ]
   },
   {
@@ -159,9 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define the Vectorizer\n",
@@ -217,6 +257,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The words above are not very informative -- in NLP they're called *stopwords*. The nltk (Natural Language Processing Toolkig) has a list of all english stopwords. Removing them from the BoW document representation can improve accuracy and provide more informative \"top words\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -231,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the Vectorizer\n",
+    "# Define the Vectorizer -- this time with stopwords\n",
     "vect = TfidfVectorizer(\n",
     "    stop_words=stopwords.words('english')\n",
     ")\n",
@@ -297,9 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(f\"Label: {news_train.target_names[news_train.target[3]]}\\n\\n\")\n",
@@ -315,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +394,6 @@
     "# Define the Vectorizer\n",
     "vect = TfidfVectorizer(\n",
     "    stop_words=stopwords.words('english'),\n",
-    "    max_df=0.8,\n",
     ")\n",
     "\n",
     "train_x = vect.fit_transform(news_train.data)\n",
